  * init --version: When the version given is one that automatically
    upgrades to a newer version, use the newer version instead.
  * Auto upgrades from older repo versions, like v5, now jump right to v8.
  * Extended annex.security.allowed-ip-addresses to let specific ports
    of an IP address to be used, while denying use of other ports.

 -- Joey Hess <id@joeyh.name>  Wed, 19 Feb 2020 12:48:58 -0400

git-annex (7.20200219) upstream; urgency=medium

  * Added sync --only-annex, which syncs the git-annex branch and annexed
    content but leaves managing the other git branches up to you.
  * Added annex.synconlyannex git config setting, which can also be set with
    git-annex config to configure sync in all clones of the repo.
  * fsck --from remote: Fix a concurrency bug that could make it incorrectly
    detect that content in the remote is corrupt, and remove it, resulting in
    data loss.
  * When git-annex is built with a ssh that does not support ssh connection
    caching, default annex.sshcaching to false, but let the user override it.
  * Improve warning messages further when ssh connection caching cannot
    be used, to clearly state why.
  * Avoid throwing fatal errors when asked to write to a readonly
    git remote on http.
  * Fix support for repositories tuned with annex.tune.branchhash1=true,
    including --all not working and git-annex log not displaying anything
    for annexed files.

 -- Joey Hess <id@joeyh.name>  Wed, 19 Feb 2020 12:44:43 -0400

git-annex (7.20200204) upstream; urgency=medium

  * Fix build with persistent-template 2.8.0.
  * Makefile: Really move the fish completion to the
    vendor_completions.d directory.

 -- Joey Hess <id@joeyh.name>  Tue, 04 Feb 2020 14:30:55 -0400

git-annex (7.20200202.7) upstream; urgency=medium

  * add: --force-annex/--force-git options make it easier to override
    annex.largefiles configuration (and potentially safer as it avoids
    bugs like the smudge bug fixed in the last release).